# unicesumar-aula8-estrutura-de-dados

./: CMakeLists.txt  README.md  main.c  readme.md
01_matriz_adjacencia/: 01-matriz-adjacencia.c  01-matriz-adjacencia.h  matriz-adjacencia.c
02_lista_adjacencia/: lista-adjacencia.c  lista-adjacencia.h
02_matriz_adj_nao_direcionado/: matriz_adj_nao_direcionado.c  matriz_adj_nao_direcionado.h
03_matriz_adj_direcionado/: matriz_adj_direcionado.c  matriz_adj_direcionado.h
03_matriz_adj_nao_direcionado/: matriz_adj_nao_direcionado.c
04_matriz_adj_direcionado/: matriz_adj_direcionado.c
04_matriz_grafo/: matriz-grafo.c
05_grafo/: matriz-grafo.c  matriz-grafo.h
